# titanbay-take-home

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  exceptions.py  main.py  pyproject.toml  requirements.md
alembic/: env.py
alembic/versions/: 2026_04_27_0940-f0e32b9c1338_add_funds_investments_and_investors_.py  2026_04_27_1001-3dbad96b910e_add_unique_constraint_to_investors_email.py
business_logic/: funds.py  investments.py  investors.py
data/: data_schemas.py  database.py  db_models.py  types.py
rest/: funds.py  investments.py  investors.py
tests/: conftest.py  test_funds.py  test_investments.py  test_investors.py
